# vulkan-game

./: .gitignore  .project.gf  Cargo.toml  build.rs  capture.cap  launch.json  rustfmt.toml  shell.nix
config/: engine.cfg.ron  engine.config.ron  flightcam.cfg.ron  flightcam.default.cfg.ron  particles.cfg.ron  player.config.ron  scene.cfg.ron  scene.config.ron  shadow.swarm.cfg.ron  starfury.default.cfg.ron  starfury.flightmodel.cfg.ron  starfury.flightmodel.default.cfg.ron
src/: app_config.rs  arcball_camera.rs  bindless.rs  camera.rs  color.rs  color_palettes.rs  crosshair.rs  debug_draw_overlay.rs  draw_context.rs  drawing_system.rs  flight_cam.rs  fps_camera.rs  frustrum.rs  game_object.rs  game_world.rs  imported_geometry.rs  main.rs  math.rs  missile_sys.rs  particles.rs  pbr.rs  physics_engine.rs  plane.rs  projectile_system.rs  resource_cache.rs  resource_system.rs  shadow_swarm.rs  skybox.rs  sprite_batch.rs  starfury.rs  test_world.rs  ui_backend.rs  vk_renderer.rs  window.rs
src/shaders/: bindless.common.glsl  dbg.draw.frag  dbg.draw.geom  dbg.draw.vert  emissive.frag  engine.glow.frag  engine.glow.vert  nonpbr.frag  nonpbr.vert  pbr.bindless.frag  pbr.bindless.vert  pbr.frag  pbr.instanced.vert  pbr.layout.frag.h  pbr.layout.vert.h  pbr.vert  projectile.frag  projectile.vert  projectiles.geom  skybox.bindless.frag  skybox.bindless.vert  skybox.frag  skybox.vert  sparks.frag  sparks.vert  sprites.bindless.frag  sprites.bindless.vert  sprites.frag  sprites.vert  ui.bindless.frag  ui.bindless.vert  ui.frag  ui.vert  wireframe.frag  wireframe.vert
