[package]
name = "vulkan-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "*", features = ["linked"] }
log = { version = "*"}
flexi_logger = { version = "*"}
imgui = "0.11.0"
mmap-rs = "*"
nalgebra = { version = "*", features = ["serde-serialize"] }
nalgebra-glm = { version = "*", features = ["serde-serialize"] }
memoffset = "*"
strum = "*"
strum_macros = "*"
gltf = { version = "*", features = ["names"] }
slice-of-array = "*"
chrono = "*"
smallvec = "*"
image = "*"
rayon = "*"
serde = "*"
ron = "*"
winit = "*"
raw-window-handle = "*"
ktx2 = "*"
palette = "*"
rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
gilrs = "*"
crossbeam = "*"
rand = "*"
rand_distr = "*"
fnv = "*"
enumflags2 = "0.7.7"

[target.'cfg(target_os = "windows")'.dependencies]
	windows-sys = { version = "*", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "unix")'.dependencies]
	x11 = "*"

[profile.dev.package."*"]
	opt-level = 3
