[package]
name = "starfury-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "*", features = ["linked"] }
log = { version = "*"}
flexi_logger = { version = "*"}
imgui = "0.11.0"
mmap-rs = "*"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
memoffset = "*"
strum = "*"
strum_macros = "*"
gltf = { version = "*", features = ["names"] }
slice-of-array = "*"
chrono = "*"
smallvec = "*"
image = "*"
rayon = "*"
serde = "1.0.193"
ron = "0.8.1"
winit = "*"
raw-window-handle = "*"
ktx2 = "*"
palette = "*"
rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
gilrs = "*"
crossbeam = "*"
rand = "*"
rand_distr = "*"
fnv = "*"
enumflags2 = "0.7.7"
tokio = { version = "1.29.0", features = ["rt-multi-thread"] }
notify = "6.1.1"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.4"
itertools = "0.11.0"
thiserror = "1.0.50"

[target.'cfg(target_os = "windows")'.dependencies]
	windows-sys = { version = "*", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "unix")'.dependencies]
	x11 = "*"

[profile.dev.package."*"]
	opt-level = 3
